# slim-s3

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: ci.yml
docs/: DESIGN.md
docs/plans/: 2026-07-09-v1-implementation.md
include/slims3/: slims3.hpp
packaging/vcpkg/ports/slims3/: portfile.cmake  vcpkg.json
src/: client.cpp  client_detail.hpp  sha256.cpp  sha256.hpp  signer.cpp  signer.hpp  transport.cpp  transport.hpp  uri.cpp  uri.hpp  xml_lite.cpp  xml_lite.hpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
tests/: CMakeLists.txt  test_client_edge.cpp  test_client_mapping.cpp  test_header_validation.cpp  test_sha256.cpp  test_signer.cpp  test_smoke.cpp  test_transport.cpp  test_uri.cpp  test_xml.cpp
tests/integration/: itest_main.cpp  run.sh  run_stub.sh  silent_server.py  stub_server.py
tools/: size-report.sh
